6.7.0
[add] send PlaybackInit, PlaybackStarted, PlaybackStopped notifications containing video id, channel id, and the status of the playing video
[fix] allow playback regardless of API status
    - fixes playback for strm, playlists, other add-ons, and sharing videos from devices
[fix] finding player config, allow playback to continue when not found if possible
[fix] fix possible loop due to invalid keys and login information
[fix] fix playback of mpeg-dash streams if HTTP Server - Listen on IP is blank
[upd] use a dialog to notify users of API key requirements with link to wiki
    - https://ytaddon.page.link/keys
[rem] remove provided api keys
[lang] de_de strings |contrib: tweimer|
[lang] el_gr strings |contrib: twilight0|
[lang] hu_hu strings |contrib: thelacesz|
[lang] pl_pl strings |contrib: drrak|

6.6.0
[add] 'Play (Ask for quality)' context menu
[add] search by channel or playlist id
[add] hide_folders, hide_playlists, hide_search, and hide_live to /channel/<channel_id>/ end-point
    - ie. plugin://plugin.video.youtube/channel/UC4PooiX37Pld1T8J5SYT-SQ/?hide_folders=true will hide all folders(Playlists, Search, and Live) in the channel listing
[fix] playback for some videos (ie. music videos)
[fix] playback of some videos with no adaptive video streams
[fix] don't update watch history when incognito/screensaver/live |contrib: regseb|
[fix] search prompting for input after video playback or refresh
[lang] el_gr strings |contrib: twilight0|
[lang] es_es strings |contrib: roliverosc|
[lang] pt_br strings |contrib: MediaBrasil|
[lang] cs_cz strings |contrib: llzn.cz|
[lang] it_it strings |contrib: SebastianoPistore|
[lang] de_de strings |contrib: tweimer|

6.5.2
[fix] playback (No streams found)
[fix] missing metadata
[fix] ended live streams not using mpeg-dash when enabled
[fix] subscriptions not showing latest videos
[upd] simplify youtube_resolver regex |contrib: Twilight0|
[lang] de_de strings |contrib: TehTux|
[lang] pl_pl strings |contrib: drrak|