@@ -13,19 +13,8 @@
     <extension point="xbmc.python.module" library="resources/lib/"/>
     <extension point="xbmc.addon.metadata">
         <news>
-[add] send PlaybackInit, PlaybackStarted, PlaybackStopped notifications containing video id, channel id, and the status of the playing video
-[fix] allow playback regardless of API status
-    - fixes playback for strm, playlists, other add-ons, and sharing videos from devices
-[fix] finding player config, allow playback to continue when not found if possible
-[fix] fix possible loop due to invalid keys and login information
-[fix] fix playback of mpeg-dash streams if HTTP Server - Listen on IP is blank
-[upd] use a dialog to notify users of API key requirements with link to wiki
-    - https://ytaddon.page.link/keys
-[rem] remove provided api keys
-[lang] de_de strings |contrib: tweimer|
-[lang] el_gr strings |contrib: twilight0|
-[lang] hu_hu strings |contrib: thelacesz|
-[lang] pl_pl strings |contrib: drrak|
+[lang] es_es strings |contrib: roliverosc|
+[lang] pt_pt strings |contrib: daniel3x|
         </news>
         <assets>
             <icon>icon.png</icon>
